убрала лишние отступы, исправления по замечаниям

--- a/source/index.html
+++ b/source/index.html
@@ -7,7 +7,7 @@
   <link href="css/style.css" rel="stylesheet">
 </head>
 
-<body class="page__body">
+<body>
   <header class="page-header">
     <div class="page-header__container">
       <div class="page-header__wrapper">
@@ -40,10 +40,8 @@
     </div>
 </header>
 <main class="page-main">
-  <div class="page-main__container">
-    <h1 class="page-main__heading">Функциональное питание для котов</h1>
-    <p class="page-main__slogan">Занялся собой? Займись котом!</p>
-  </div>
+  <h1 class="page-main__heading">Функциональное питание для котов</h1>
+  <p class="page-main__slogan">Занялся собой? Займись котом!</p>
   <section class="programs">
     <h2 class="visually-hidden">
       Программы
