--- a/source/catalog.html
+++ b/source/catalog.html
@@ -7,7 +7,7 @@
   <link href="css/style.css" rel="stylesheet">
 </head>
 
-<body class="page__body">
+<body>
   <header class="page-header">
     <div class="page-header__container">
       <div class="page-header__wrapper">
