--- a/source/form.html
+++ b/source/form.html
@@ -4,125 +4,112 @@
 <head>
   <meta charset="utf-8">
   <title>Подбор программы Кэт энерджи</title>
-  <link href="css/style.css" rel="stylesheet">
 </head>
 
 <body class="page__body">
   <header class="page-header">
-    <div class="page-header__container">
-      <div class="page-header__wrapper">
-        <a class="page-header__logo" href="index.html">
-          <img class="page-header__logo-image" src="https://via.placeholder.com/150x150" width="33" height="37"
-            alt="Кэт энерджи">
-        </a>
-        <a class="page-header__title" href="index.html"><b>Cat</b> energy</a>
-      </div>
-      <nav class="main-nav">
-        <button class="main-nav__toggle" type="button"><span class="visually-hidden">Открыть меню</span></button>
-        <ul class="main-nav__list site-list">
-          <li class="site-list__item site-list__item--active">
-            <a href="index.html">
-              Главная
-            </a>
-          </li>
-          <li class="site-list__item">
-            <a href="catalog.html">
-              Каталог продукции
-            </a>
-          </li>
-          <li class="site-list__item">
-            <a>
-              Подбор программы
-            </a>
-          </li>
-        </ul>
-      </nav>
-    </div>
-</header>
+    <a class="page-header__logo" href="index.html">
+      <img class="page-header__logo-image" src="https://via.placeholder.com/150x150" width="33" height="37"
+        alt="Кэт энерджи">
+    </a>
+    <a class="page-header__title" href="index.html"><b>Cat</b> energy</a>
+    <nav class="main-nav">
+      <button class="main-nav__toggle" type="button"><span class="visually-hidden">Открыть меню</span></button>
+      <ul class="main-nav__list site-list">
+        <li class="site-list__item">
+          <a href="index.html">
+            Главная
+          </a>
+        </li>
+        <li class="site-list__item">
+          <a href="catalog.html">
+            Каталог продукции
+          </a>
+        </li>
+        <li class="site-list__item site-list__item--active">
+          <a>
+            Подбор программы
+          </a>
+        </li>
+      </ul>
+    </nav>
+  </header>
   <main class="form-main">
-    <div class="container">
-      <h1 class="form-main__heading">Подбор программы</h1>
-    </div>
-    <form class="form container" action="https://echo.htmlacademy.ru/" method="post">
+    <h1 class="form-main__heading">Подбор программы</h1>
+    <form class="form" action="https://echo.htmlacademy.ru/" method="post">
       <p class="form__text">Заполните анкету, и мы подберем программу питания для вашего кота</p>
-      <fieldset class="form__item form__item--info wrapper">
+      <fieldset class="form__item form__item--info">
         <legend class="visually-hidden">Информация о питомце</legend>
-        <p class="form__wrapper">
+        <p>
           <label for="catName">Имя:<sup>*</sup></label>
           <input type="text" id="catName" placeholder="Барсик" required>
         </p>
-        <p class="form__wrapper form__wrapper--weight">
+        <p>
           <label for="catWeight">Вес (кг):<sup>*</sup></label>
           <input type="number" id="catWeight" placeholder="7" required>
         </p>
-        <p class="form__wrapper form__wrapper--age">
+        <p>
           <label for="catAge">Возраст (лет):</label>
           <input type="number" id="catAge" placeholder="7">
         </p>
       </fieldset>
-      <fieldset class="form__item form__item--program wrapper">
+      <fieldset class="form__item form__item--program">
         <legend class="visually-hidden">Цель программы</legend>
-        <ul class="form__list form__list--goal">
-          <li class="form__option">
-            <input class="form__radio" type="radio" name="programVersion" id="slimProgram" checked>
+        <ul class="form__list">
+          <li class="form__option form__radio">
+            <input type="radio" name="programVersion" id="slimProgram" checked>
             <label for="slimProgram">Похудение</label>
           </li>
-          <li class="form__option">
-            <input class="form__radio" type="radio" name="programVersion" id="proProgram">
+          <li class="form__option form__radio">
+            <input type="radio" name="programVersion" id="proProgram">
             <label for="proProgram">Набор массы</label>
           </li>
-          <li class="form__option">
-            <input class="form__radio" type="radio" name="programVersion" id="needAdvice">
+          <li class="form__option form__radio">
+            <input type="radio" name="programVersion" id="needAdvice">
             <label for="needAdvice">Не знаю (Нужен ваш совет)</label>
           </li>
         </ul>
       </fieldset>
       <fieldset class="form__item form__item--contacts">
-          <legend class="form__legend">Контактные данные (владельца кота)</legend>
-          <p>
-            <label for="contactMail">E-mail:<sup>*</sup></label>
-            <input type="email" id="contactMail" placeholder="kuklachev@gmail.com" required>
-          </p>
-          <p>
-            <label for="contactTel">Телефон:<sup>*</sup></label>
-            <input type="tel" id="contactTel" placeholder="8 (960) 900-60-90" required>
-          </p>
+        <legend class="form__legend">Контактные данные (владельца кота)</legend>
+        <p>
+          <label for="contactMail">E-mail:<sup>*</sup></label>
+          <input type="email" id="contactMail" placeholder="kuklachev@gmail.com" required>
+        </p>
+        <p>
+          <label for="contactTel">Телефон:<sup>*</sup></label>
+          <input type="tel" id="contactTel" placeholder="8 (960) 900-60-90" required>
+        </p>
       </fieldset>
-      <fieldset class="form__item">
+      <fieldset>
         <label for="comment" class="form__legend">Комментарий</label>
-        <div class="wrapper">
-          <textarea id="comment" name="commentArea" placeholder="Расскажите обо всех повадках кота"></textarea>
-        </div>
+        <textarea id="comment" name="commentArea" placeholder="Расскажите обо всех повадках кота"></textarea>
       </fieldset>
-      <fieldset class="form__item">
-        <legend class="form__legend form__legend--extra">Дополнительно</legend>
-        <ul class="form__list form__list--extra">
-          <li class="form__option">
-            <input class="form__checkbox" type="checkbox" name="extraSweetener" id="sweetener" checked>
+      <fieldset>
+        <legend class="form__legend">Дополнительно</legend>
+        <ul class="form__list">
+          <li class="form__option form__checkbox">
+            <input type="checkbox" name="extraSweetener" id="sweetener" checked>
             <label for="sweetener">Сахарозаменитель</label>
           </li>
-          <li class="form__option">
-            <input class="form__checkbox" type="checkbox" name="extraWater" id="water">
+          <li class="form__option form__checkbox">
+            <input type="checkbox" name="extraWater" id="water">
             <label for="water">Питьевая вода</label>
           </li>
-          <li class="form__option">
-            <input class="form__checkbox" type="checkbox" name="extraMilk" id="milk">
+          <li class="form__option form__checkbox">
+            <input type="checkbox" name="extraMilk" id="milk">
             <label for="milk">Молоко</label>
           </li>
-          <li class="form__option">
-            <input class="form__checkbox" type="checkbox" name="extraVitamins" id="vitamins">
+          <li class="form__option form__checkbox">
+            <input type="checkbox" name="extraVitamins" id="vitamins">
             <label for="vitamins">Витамины</label>
           </li>
         </ul>
       </fieldset>
-      <div class="form__footer wrapper">
-        <button class="form__button wrapper" type="submit">Отправить заявку</button>
-        <div class="form__note"><sup>*</sup> — Обязательные поля</div>
-      </div>
-
-      </div>
+      <button class="form__button" type="submit">Отправить заявку</button>
+      <div><sup>*</sup> — Обязательные поля</div>
     </form>
-    <section class="address address--grey-bg">
+    <section class="address">
       <h2 class="visually-hidden">
         Адрес
       </h2>
