--- a/source/index.html
+++ b/source/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html class="page" lang="ru">
+<html lang="ru">
 
 <head>
   <meta charset="utf-8">
@@ -9,39 +9,39 @@
 
 <body>
   <header class="page-header">
-    <div class="page-header__container">
-      <div class="page-header__wrapper">
-        <a class="page-header__logo">
-          <img class="page-header__logo-image" src="https://via.placeholder.com/150x150" width="33" height="37"
-            alt="Кэт энерджи">
-        </a>
-        <a class="page-header__title"><b>Cat</b> energy</a>
-      </div>
-      <nav class="main-nav">
-        <button class="main-nav__toggle" type="button"><span class="visually-hidden">Открыть меню</span></button>
-        <ul class="main-nav__list site-list">
-          <li class="site-list__item site-list__item--active">
-            <a>
-              Главная
-            </a>
-          </li>
-          <li class="site-list__item">
-            <a href="catalog.html">
-              Каталог продукции
-            </a>
-          </li>
-          <li class="site-list__item">
-            <a href="form.html">
-              Подбор программы
-            </a>
-          </li>
-        </ul>
-      </nav>
+    <div class="page-header__wrapper">
+      <a class="page-header__logo">
+        <img class="page-header__logo-image" src="https://via.placeholder.com/150x150" width="33" height="37"
+          alt="Кэт энерджи">
+      </a>
+      <a class="page-header__title"><b>Cat</b> energy</a>
     </div>
+    <nav class="main-nav">
+      <button class="main-nav__toggle" type="button"><span class="visually-hidden">Открыть меню</span></button>
+      <ul class="main-nav__list site-list">
+        <li class="site-list__item site-list__item--active">
+          <a>
+            Главная
+          </a>
+        </li>
+        <li class="site-list__item">
+          <a href="catalog.html">
+            Каталог продукции
+          </a>
+        </li>
+        <li class="site-list__item">
+          <a href="form.html">
+            Подбор программы
+          </a>
+        </li>
+      </ul>
+    </nav>
 </header>
 <main class="page-main">
-  <h1 class="page-main__heading">Функциональное питание для котов</h1>
-  <p class="page-main__slogan">Занялся собой? Займись котом!</p>
+  <div class="page-main__title">
+    <h1 class="page-main__heading">Функциональное питание для котов</h1>
+    <p class="page-main__slogan">Занялся собой? Займись котом!</p>
+  </div>
   <section class="programs">
     <h2 class="visually-hidden">
       Программы
