исправление стилизации каталога

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -9,35 +9,33 @@
 
 <body>
   <header class="page-header">
-    <div class="page-header__container">
-      <div class="page-header__wrapper">
-        <a class="page-header__logo" href="index.html">
-          <img class="page-header__logo-image" src="https://via.placeholder.com/150x150" width="33" height="37"
-            alt="Кэт энерджи">
-        </a>
-        <a class="page-header__title" href="index.html"><b>Cat</b> energy</a>
-      </div>
-      <nav class="main-nav">
-        <button class="main-nav__toggle" type="button"><span class="visually-hidden">Открыть меню</span></button>
-        <ul class="main-nav__list site-list">
-          <li class="site-list__item site-list__item--active">
-            <a href="index.html">
-              Главная
-            </a>
-          </li>
-          <li class="site-list__item">
-            <a>
-              Каталог продукции
-            </a>
-          </li>
-          <li class="site-list__item">
-            <a href="form.html">
-              Подбор программы
-            </a>
-          </li>
-        </ul>
-      </nav>
+    <div class="page-header__wrapper">
+      <a class="page-header__logo" href="index.html">
+        <img class="page-header__logo-image" src="https://via.placeholder.com/150x150" width="33" height="37"
+          alt="Кэт энерджи">
+      </a>
+      <a class="page-header__title" href="index.html"><b>Cat</b> energy</a>
     </div>
+    <nav class="main-nav">
+      <button class="main-nav__toggle" type="button"><span class="visually-hidden">Открыть меню</span></button>
+      <ul class="main-nav__list site-list">
+        <li class="site-list__item site-list__item--active">
+          <a href="index.html">
+            Главная
+          </a>
+        </li>
+        <li class="site-list__item">
+          <a>
+            Каталог продукции
+          </a>
+        </li>
+        <li class="site-list__item">
+          <a href="form.html">
+            Подбор программы
+          </a>
+        </li>
+      </ul>
+    </nav>
 </header>
 <main class="catalog-main">
   <h1 class="catalog-main__heading">Каталог продукции</h1>
@@ -71,8 +69,8 @@
               </tr>
             </table>
           </div>
+          <a class="products__link" href="cart.html">Заказать</a>
         </div>
-        <a class="products__link" href="cart.html">Заказать</a>
       </li>
       <li class="products__item">
         <div class="products__card">
@@ -101,8 +99,8 @@
               </tr>
             </table>
           </div>
-        </div>
           <a class="products__link" href="cart.html">Заказать</a>
+        </div>
       </li>
       <li class="products__item">
         <div class="products__card">
@@ -131,8 +129,8 @@
               </tr>
             </table>
           </div>
-        </div>
           <a class="products__link" href="cart.html">Заказать</a>
+        </div>
       </li>
       <li class="products__item">
         <div class="products__card">
@@ -161,8 +159,8 @@
               </tr>
             </table>
           </div>
-        </div>
           <a class="products__link" href="cart.html">Заказать</a>
+        </div>
       </li>
       <li class="products__item">
         <div class="products__card">
@@ -191,8 +189,8 @@
               </tr>
             </table>
           </div>
-        </div>
           <a class="products__link" href="cart.html">Заказать</a>
+        </div>
       </li>
       <li class="products__item">
         <div class="products__card">
@@ -221,8 +219,8 @@
               </tr>
             </table>
           </div>
-        </div>
           <a class="products__link" href="cart.html">Заказать</a>
+        </div>
       </li>
       <li class="products__item">
         <div class="products__card">
@@ -251,8 +249,8 @@
               </tr>
             </table>
           </div>
-        </div>
           <a class="products__link" href="cart.html">Заказать</a>
+        </div>
       </li>
     </ul>
     <div class="products-big-list">
@@ -313,7 +311,9 @@
         </div>
       </li>
     </ul>
-    <p class="extra-products__text">Закажите все и получите чехол для кота в подарок!</p>
+    <div class="extra-products__wrapper">
+      <p class="extra-products__text">Закажите все и получите чехол для кота в подарок!</p>
+    </div>
   </section>
   <section class="address address--grey-bg">
     <h2 class="visually-hidden">
