исправление стилизации - центрирование контента, растяжка фона

--- a/source/index.html
+++ b/source/index.html
@@ -38,8 +38,8 @@
     </nav>
 </header>
 <main class="page-main">
-  <div class="page-main__title">
-    <h1 class="page-main__heading">Функциональное питание для котов</h1>
+  <div class="page-main__heading">
+    <h1 class="page-main__title">Функциональное питание для котов</h1>
     <p class="page-main__slogan">Занялся собой? Займись котом!</p>
   </div>
   <section class="programs">
