--- a/source/index.html
+++ b/source/index.html
@@ -96,7 +96,7 @@
         Живой пример
       </h2>
     </div>
-    <div class="example__desktop-wrapper">
+    <div class="example__container">
       <div class="example__wrapper">
         <p class="example__description">
           Борис сбросил 5 кг за 2 месяца, просто заменив свой обычный корм на Cat Energy Slim. Отличный результат без
