--- a/source/index.html
+++ b/source/index.html
@@ -10,33 +10,35 @@
 
 <body>
   <header class="page-header">
-    <div class="page-header__wrapper">
-      <a class="page-header__logo">
-        <img class="page-header__logo-image" src="https://via.placeholder.com/150x150" width="33" height="37"
-          alt="Кэт энерджи">
-      </a>
-      <a class="page-header__title"><b>Cat</b> energy</a>
+    <div class="page-header__container">
+      <div class="page-header__wrapper">
+        <a class="page-header__logo">
+          <img class="page-header__logo-image" src="https://via.placeholder.com/150x150" width="33" height="37"
+            alt="Кэт энерджи">
+        </a>
+        <a class="page-header__title"><b>Cat</b> energy</a>
+      </div>
+      <nav class="main-nav">
+        <button class="main-nav__toggle" type="button"><span class="visually-hidden">Открыть меню</span></button>
+        <ul class="main-nav__list site-list">
+          <li class="site-list__item site-list__item--active">
+            <a>
+              Главная
+            </a>
+          </li>
+          <li class="site-list__item">
+            <a href="catalog.html">
+              Каталог продукции
+            </a>
+          </li>
+          <li class="site-list__item">
+            <a href="form.html">
+              Подбор программы
+            </a>
+          </li>
+        </ul>
+      </nav>
     </div>
-    <nav class="main-nav">
-      <button class="main-nav__toggle" type="button"><span class="visually-hidden">Открыть меню</span></button>
-      <ul class="main-nav__list site-list">
-        <li class="site-list__item site-list__item--active">
-          <a>
-            Главная
-          </a>
-        </li>
-        <li class="site-list__item">
-          <a href="catalog.html">
-            Каталог продукции
-          </a>
-        </li>
-        <li class="site-list__item">
-          <a href="form.html">
-            Подбор программы
-          </a>
-        </li>
-      </ul>
-    </nav>
 </header>
 <main class="page-main">
   <div class="page-main__heading">
@@ -96,36 +98,40 @@
         Живой пример
       </h2>
     </div>
-    <div class="example__container">
-      <div class="example__wrapper">
-        <p class="example__description">
-          Борис сбросил 5 кг за 2 месяца, просто заменив свой обычный корм на Cat Energy Slim. Отличный результат без
-          изнуряющих тренировок! При этом он не менял своих привычек и по-прежнему спит по 16 часов в день.
-        </p>
-        <div class="example-result">
-          <div class="example-result__item example-result__item--weight">
-            <p class="example-result__count">5 кг</p>
-            <p class="example-result__text">снижение веса</p>
+    <div class="example__big-container">
+      <div class="example__container">
+        <div class="example__wrapper">
+          <p class="example__description">
+            Борис сбросил 5 кг за 2 месяца, просто заменив свой обычный корм на Cat Energy Slim. Отличный результат без
+            изнуряющих тренировок! При этом он не менял своих привычек и по-прежнему спит по 16 часов в день.
+          </p>
+          <div class="example-result">
+            <div class="example-result__item example-result__item--weight">
+              <p class="example-result__count">5 кг</p>
+              <p class="example-result__text">снижение веса</p>
+            </div>
+            <div class="example-result__item example-result__item--duration">
+              <p class="example-result__count">60 дней</p>
+              <p class="example-result__text">затрачено времени</p>
+            </div>
+            <p class="example-result__costs">Затраты на питание: 15 000 руб.</p>
           </div>
-          <div class="example-result__item example-result__item--duration">
-            <p class="example-result__count">60 дней</p>
-            <p class="example-result__text">затрачено времени</p>
-          </div>
-          <p class="example-result__costs">Затраты на питание: 15 000 руб.</p>
         </div>
-      </div>
-      <div class="example__slider slider">
-        <ul class="slider__list">
-          <li class="slider__item slider__item--before slider__item--current">
-            <img class="slider__photo slider__photo--before" src="https://via.placeholder.com/150x150" width="311"
-              height="232" alt="Фото до">
-          </li>
-          <li class="slider__item slider__item--after">
-            <img class="slider__photo slider__photo--after" src="https://via.placeholder.com/150x150" width="311"
-              height="232" alt="Фото после">
-          </li>
-        </ul>
-        <div class="slider__toggles-wrapper">
+        <div class="example__slider slider">
+          <div class="slider__wrapper">
+            <ul class="slider__list">
+              <li class="slider__item slider__item--before slider__item--current">
+                <img class="slider__photo slider__photo--before" src="https://via.placeholder.com/150x150" width="311"
+                  height="232" alt="Фото до">
+              </li>
+              <li class="slider__item slider__item--after">
+                <img class="slider__photo slider__photo--after" src="https://via.placeholder.com/150x150" width="311"
+                  height="232" alt="Фото после">
+              </li>
+            </ul>
+            <div class="slider__toggles-wrapper">
+            </div>
+          </div>
         </div>
       </div>
     </div>
@@ -148,28 +154,30 @@
   </section>
 </main>
 <footer class="page-footer">
-  <p class="page-footer__heading"><b>Cat</b> energy</p>
-  <div class="page-footer__social social">
-    <h2 class="visually-hidden">
-      Социальные сети
-    </h2>
-    <ul class="social__list">
-      <li class="social__item">
-        <a class="social__link social__link--vkontakte" href="https://vk.com/htmlacademy"><span
-            class="visually-hidden">Вконтакте</span></a>
-      </li>
-      <li class="social__item">
-        <a class="social__link social__link--instagram" href="https://www.instagram.com/htmlacademy"><span
-            class="visually-hidden">Инстаграм</span></a>
-      </li>
-      <li class="social__item">
-        <a class="social__link social__link--facebook" href="https://www.facebook.com/htmlacademy"><span
-            class="visually-hidden">Фейсбук</span></a>
-      </li>
-    </ul>
-  </div>
-  <div class="page-footer__copyright copyright">
-    <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive">HTML Academy</a>
+  <div class="page-footer__wrapper">
+    <p class="page-footer__heading"><b>Cat</b> energy</p>
+    <div class="page-footer__social social">
+      <h2 class="visually-hidden">
+        Социальные сети
+      </h2>
+      <ul class="social__list">
+        <li class="social__item">
+          <a class="social__link social__link--vkontakte" href="https://vk.com/htmlacademy"><span
+              class="visually-hidden">Вконтакте</span></a>
+        </li>
+        <li class="social__item">
+          <a class="social__link social__link--instagram" href="https://www.instagram.com/htmlacademy"><span
+              class="visually-hidden">Инстаграм</span></a>
+        </li>
+        <li class="social__item">
+          <a class="social__link social__link--facebook" href="https://www.facebook.com/htmlacademy"><span
+              class="visually-hidden">Фейсбук</span></a>
+        </li>
+      </ul>
+    </div>
+    <div class="page-footer__copyright copyright">
+      <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive">HTML Academy</a>
+    </div>
   </div>
 </footer>
 
