заменила проценты на px, заменила миксины, исправила по замечаниям сетки каталога и формы

--- a/source/form.html
+++ b/source/form.html
@@ -21,17 +21,17 @@
       <nav class="main-nav main-nav--casual">
         <button class="main-nav__toggle" type="button"><span class="visually-hidden">Открыть меню</span></button>
         <ul class="main-nav__list site-list site-list--casual">
-          <li class="site-list__item site-list__item-casual">
+          <li class="site-list__item site-list__item--casual">
             <a href="index.html">
               Главная
             </a>
           </li>
-          <li class="site-list__item site-list__item-casual">
+          <li class="site-list__item site-list__item--casual">
             <a href="catalog.html">
               Каталог продукции
             </a>
           </li>
-          <li class="site-list__item site-list__item-casual site-list__item--active">
+          <li class="site-list__item site-list__item--casual site-list__item--active">
             <a>
               Подбор программы
             </a>
