--- a/source/index.html
+++ b/source/index.html
@@ -21,18 +21,18 @@
       <nav class="main-nav main-nav--index">
         <button class="main-nav__toggle" type="button"><span class="visually-hidden">Открыть меню</span></button>
         <ul class="main-nav__list site-list site-list--index">
-          <li class="site-list__item site-list__item--active">
-            <a>
+          <li class="site-list__item">
+            <a class="site-list__link site-list__link--active">
               Главная
             </a>
           </li>
           <li class="site-list__item">
-            <a href="catalog.html">
+            <a class="site-list__link" href="catalog.html">
               Каталог продукции
             </a>
           </li>
           <li class="site-list__item">
-            <a href="form.html">
+            <a  class="site-list__link" href="form.html">
               Подбор программы
             </a>
           </li>
