--- a/source/catalog.html
+++ b/source/catalog.html
@@ -22,7 +22,7 @@
         <button class="main-nav__toggle" type="button"><span class="visually-hidden">Открыть меню</span></button>
         <ul class="main-nav__list site-list">
           <li class="site-list__item">
-            <a href="index.html" class="site-list__link">
+            <a class="site-list__link" href="index.html">
               Главная
             </a>
           </li>
@@ -32,7 +32,7 @@
             </a>
           </li>
           <li class="site-list__item">
-            <a href="form.html" class="site-list__link">
+            <a class="site-list__link" href="form.html">
               Подбор программы
             </a>
           </li>
