--- a/source/form.html
+++ b/source/form.html
@@ -10,7 +10,7 @@
 
 <body>
   <header class="page-header">
-    <div class="page-header__container page-header__container--casual">
+    <div class="page-header__container">
       <div class="page-header__wrapper">
         <a class="page-header__logo" href="index.html">
           <img class="page-header__logo-image" src="https://via.placeholder.com/150x150" width="33" height="37"
@@ -18,21 +18,21 @@
         </a>
         <a class="page-header__title" href="index.html"><b>Cat</b> energy</a>
       </div>
-      <nav class="main-nav main-nav--casual">
+      <nav class="main-nav main-nav--closed main-nav--nojs">
         <button class="main-nav__toggle" type="button"><span class="visually-hidden">Открыть меню</span></button>
-        <ul class="main-nav__list site-list site-list--casual">
-          <li class="site-list__item site-list__item--casual">
-            <a href="index.html">
+        <ul class="main-nav__list site-list">
+          <li class="site-list__item">
+            <a class="site-list__link" href="index.html">
               Главная
             </a>
           </li>
-          <li class="site-list__item site-list__item--casual">
-            <a href="catalog.html">
+          <li class="site-list__item">
+            <a class="site-list__link" href="catalog.html">
               Каталог продукции
             </a>
           </li>
-          <li class="site-list__item site-list__item--casual site-list__item--active">
-            <a>
+          <li class="site-list__item">
+            <a class="site-list__link site-list__link--active">
               Подбор программы
             </a>
           </li>
@@ -44,72 +44,72 @@
     <h1 class="form-main__heading">Подбор программы</h1>
     <p class="form-main__text">Заполните анкету, и мы подберем<br> программу питания для вашего кота</p>
     <form class="form" action="https://echo.htmlacademy.ru/" method="post">
-      <div class="form__wrapper">
-        <div class="form__columns">
-          <fieldset class="form__item form__item--info">
-            <legend class="visually-hidden">Информация о питомце</legend>
-            <div class="form__container form__container--info">
-              <p class="form__point">
-                <label for="catName">Имя:<sup>*</sup></label>
-                <input class="form__field form__field--name" type="text" id="catName" placeholder="Барсик" required>
-              </p>
-              <p class="form__point">
-                <label for="catWeight">Вес (кг):<sup>*</sup></label>
-                <input class="form__field form__field--weight" type="number" id="catWeight" placeholder="7" required>
-              </p>
-              <p class="form__point">
-                <label for="catAge">Возраст (лет):</label>
-                <input class="form__field form__field--age" type="number" id="catAge" placeholder="7">
-              </p>
-            </div>
-          </fieldset>
-          <fieldset class="form__item form__item--program">
-            <div class="form__container form__container--goal">
-              <legend class="visually-hidden">Цель программы</legend>
-              <ul class="form__list form__list--goal">
-                <li class="form__option">
-                  <input class="form__radio" type="radio" name="programVersion" id="slimProgram" checked>
-                  <label for="slimProgram">Похудение</label>
-                </li>
-                <li class="form__option">
-                  <input class="form__radio" type="radio" name="programVersion" id="proProgram">
-                  <label for="proProgram">Набор массы</label>
-                </li>
-                <li class="form__option">
-                  <input class="form__radio" type="radio" name="programVersion" id="needAdvice">
-                  <label for="needAdvice">Не знаю (Нужен ваш совет)</label>
-                </li>
-              </ul>
-            </div>
-          </fieldset>
+      <div class="form__columns">
+        <fieldset class="form__item form__item--info">
+          <legend class="visually-hidden">Информация о питомце</legend>
+          <div class="form__container form__container--info">
+            <p class="form__point">
+              <label for="catName">Имя:<sup>*</sup></label>
+              <input class="form__field form__field--name" type="text" id="catName" placeholder="Барсик" required>
+            </p>
+            <p class="form__point">
+              <label for="catWeight">Вес (кг):<sup>*</sup></label>
+              <input class="form__field form__field--weight" type="number" id="catWeight" placeholder="7" required>
+            </p>
+            <p class="form__point">
+              <label for="catAge">Возраст (лет):</label>
+              <input class="form__field form__field--age" type="number" id="catAge" placeholder="7">
+            </p>
+          </div>
+        </fieldset>
+        <fieldset class="form__item form__item--program">
+          <div class="form__container form__container--goal">
+            <legend class="visually-hidden">Цель программы</legend>
+            <ul class="form__list form__list--goal">
+              <li class="form__option">
+                <input class="form__radio" type="radio" name="programVersion" id="slimProgram" checked>
+                <label for="slimProgram">Похудение</label>
+              </li>
+              <li class="form__option">
+                <input class="form__radio" type="radio" name="programVersion" id="proProgram">
+                <label for="proProgram">Набор массы</label>
+              </li>
+              <li class="form__option">
+                <input class="form__radio" type="radio" name="programVersion" id="needAdvice">
+                <label for="needAdvice">Не знаю (Нужен ваш совет)</label>
+              </li>
+            </ul>
+          </div>
+        </fieldset>
+      </div>
+      <fieldset class="form__item form__item--contacts">
+        <div class="form__title form__title--contacts">
+          <legend class="form__legend form__legend--contacts">Контактные данные<br> (владельца кота)</legend>
         </div>
-        <fieldset class="form__item form__item--contacts">
-          <div class="form__title">
-            <legend class="form__legend form__legend--contacts">Контактные данные (владельца кота)</legend>
-          </div>
-          <div class="form__container form__container--contacts">
-            <p class="form__point">
-              <label for="contactMail">E-mail:<sup>*</sup></label>
-              <input class="form__field form__field--mail" type="email" id="contactMail" placeholder="kuklachev@gmail.com" required>
-            </p>
-            <p class="form__point">
-              <label for="contactTel">Телефон:<sup>*</sup></label>
-              <input class="form__field form__field--tel" type="tel" id="contactTel" placeholder="8 (960) 900-60-90" required>
-            </p>
-          </div>
-        </fieldset>
-        <fieldset class="form__item form__item--comment">
-          <div class="form__title">
-            <label class="form__legend" for="comment">Комментарий</label>
-          </div>
-          <div class="form__container">
-            <textarea class="form__textarea" id="comment" name="commentArea" placeholder="Расскажите обо всех повадках кота"></textarea>
-          </div>
-        </fieldset>
-        <fieldset class="form__item form__item--add">
-          <div class="form__title">
-            <legend class="form__legend form__legend--extra">Дополнительно</legend>
-          </div>
+        <div class="form__container form__container--contacts">
+          <p class="form__point form__point--contacts">
+            <label for="contactMail">E-mail:<sup>*</sup></label>
+            <input class="form__field form__field--mail" type="email" id="contactMail" placeholder="kuklachev@gmail.com" required>
+          </p>
+          <p class="form__point">
+            <label for="contactTel">Телефон:<sup>*</sup></label>
+            <input class="form__field form__field--tel" type="tel" id="contactTel" placeholder="8 (960) 900-60-90" required>
+          </p>
+        </div>
+      </fieldset>
+      <fieldset class="form__item form__item--comment">
+        <div class="form__title form__title--comment">
+          <label class="form__legend" for="comment">Комментарий</label>
+        </div>
+        <div class="form__container">
+          <textarea class="form__textarea" id="comment" name="commentArea" placeholder="Расскажите обо всех повадках кота"></textarea>
+        </div>
+      </fieldset>
+      <fieldset class="form__item form__item--add">
+        <div class="form__title form__title--add">
+          <legend class="form__legend form__legend--extra">Дополнительно</legend>
+        </div>
+        <div class="form__container">
           <ul class="form__list form__list--extra">
             <li class="form__option">
               <input class="form__checkbox" type="checkbox" name="extraSweetener" id="sweetener" checked>
@@ -128,24 +128,29 @@
               <label for="vitamins">Витамины</label>
             </li>
           </ul>
-        </fieldset>
-        <div class="form__footer">
-          <button class="form__button" type="submit">Отправить заявку</button>
-          <div class="form__note"><sup>*</sup> &mdash; Обязательные поля</div>
         </div>
+      </fieldset>
+      <div class="form__footer form__container">
+        <button class="form__button" type="submit">Отправить заявку</button>
+        <div class="form__note"><sup>*</sup> &mdash; Обязательные поля</div>
       </div>
     </form>
     <section class="address address--grey-bg">
       <h2 class="visually-hidden">
         Адрес
       </h2>
-      <div class="address__wrapper">
-        <p class="address__text">
-          Приглашаем к сотрудничеству дилеров!
+      <div class="address__wrapper address__wrapper--grey-bg address__wrapper--form">
+        <p class="address__text address__text--grey-bg">
+          Приглашаем<br> к сотрудничеству дилеров!
         </p>
-        <p class="address__info">
-          ул. Большая Конюшенная, д. 19/8 Санкт-Петербург
-        </p>
+        <div>
+          <p class="address__info address__info--steet">
+            ул. Большая Конюшенная, д. 19/8
+          </p>
+          <p class="address__info address__info--city">
+            Санкт-Петербург
+          </p>
+        </div>
       </div>
       <div class="address__map">
 
@@ -179,6 +184,8 @@
       </div>
     </div>
   </footer>
+
+  <script src="/js/menu.js"></script>
 </body>
 
   </html>
