исправление сетки каталога и формы

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -321,7 +321,7 @@
             </li>
           </ul>
           <div class="extra-products__container">
-            <p class="extra-products__text">Закажите все<br> и получите чехол для кота в подарок!</p>
+            <p class="extra-products__text">Закажите все и&nbsp;получите чехол для кота в подарок!</p>
           </div>
         </div>
       </div>
@@ -332,7 +332,7 @@
       </h2>
       <div class="address__wrapper address__wrapper--grey-bg">
         <p class="address__text address__text--grey-bg">
-          Приглашаем<br> к сотрудничеству дилеров!
+          Приглашаем к&nbsp;сотрудничеству дилеров!
         </p>
         <div>
           <p class="address__info address__info--steet">
@@ -376,7 +376,7 @@
     </div>
   </footer>
 
-  <script src="/js/menu.js"></script>
+  <script src="js/menu.js"></script>
 
 </body>
 
