выравнивание заголовков в каталоге и форме, контента формы

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -267,7 +267,11 @@
       </div>
     </section>
     <section class="extra-products">
-      <h2 class="extra-products__heading">Дополнительные товары</h2>
+      <h2 class="extra-products__heading">
+        <div>
+          <span>Дополнительные товары</span>
+        </div>
+      </h2>
       <div class="extra-products__wrapper">
         <div class="extra-products__big-container">
           <ul class="extra-products__list">
