--- a/source/form.html
+++ b/source/form.html
@@ -84,7 +84,11 @@
       </div>
       <fieldset class="form__item form__item--contacts">
         <div class="form__title">
-          <legend class="form__legend">Контактные данные (владельца кота)</legend>
+          <legend class="form__legend">
+            <span>
+              Контактные данные (владельца кота)
+            </span>
+          </legend>
         </div>
         <div class="form__container">
           <p class="form__point form__point--contacts">
@@ -99,15 +103,24 @@
       </fieldset>
       <fieldset class="form__item form__item--comment">
         <div class="form__title">
-          <label class="form__legend" for="comment">Комментарий</label>
+          <legend class="form__legend">
+            <span>
+              Комментарий
+            </span>
+          </legend>
         </div>
         <div class="form__container">
+          <label class="visually-hidden" aria-label="Комментарий"></label>
           <textarea class="form__textarea" id="comment" name="commentArea" placeholder="Расскажите обо всех повадках кота"></textarea>
         </div>
       </fieldset>
       <fieldset class="form__item form__item--add">
         <div class="form__title">
-          <legend class="form__legend">Дополнительно</legend>
+          <legend class="form__legend">
+            <span>
+              Дополнительно
+            </span>
+          </legend>
         </div>
         <div class="form__container">
           <ul class="form__list form__list--extra">
