выравнивание заголовков на десктопной ширине

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -268,7 +268,7 @@
     </section>
     <section class="extra-products">
       <h2 class="extra-products__heading">
-        <div>
+        <div class="extra-products__line">
           <span>Дополнительные товары</span>
         </div>
       </h2>
