--- a/source/form.html
+++ b/source/form.html
@@ -83,7 +83,7 @@
         </fieldset>
       </div>
       <fieldset class="form__item form__item--contacts">
-        <div class="form__title">
+        <div class="form__title form__title--line">
           <legend class="form__legend">
             <span>
               Контактные данные (владельца кота)
