удалила отдельные svg файлы, добавила адрес ссылки в лого

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -12,7 +12,7 @@
   <header class="page-header">
     <div class="page-header__container">
       <div class="page-header__wrapper">
-        <a class="page-header__logo">
+        <a class="page-header__logo" href="index.html">
           <picture>
             <source media="(min-width: 1440px)" srcset="img/logo-desktop.svg">
             <source media="(min-width: 768px)" srcset="img/logo-tablet.svg">
@@ -20,7 +20,7 @@
               alt="Лого Кэт энерджи">
           </picture>
         </a>
-        <a class="page-header__title">
+        <a class="page-header__title" href="index.html">
           <img class="page-header__logo-text" src="img/logo-mobile-text.svg" width="101" height="18"
           alt="Cat energy">
         </a>
@@ -394,7 +394,7 @@
   </main>
   <footer class="page-footer">
     <div class="page-footer__wrapper">
-      <a class="page-footer__heading" aria-label="Cat energy"></a>
+      <a class="page-footer__heading" aria-label="Cat energy" href="index.html"></a>
       <div class="page-footer__social social">
         <h2 class="visually-hidden">
           Социальные сети
