добавила адрес ссылки в футере, добавила отступы на главной в секции пример, убрала лишние отступы при фокусе в полях ввода

--- a/source/form.html
+++ b/source/form.html
@@ -215,7 +215,7 @@
   </main>
   <footer class="page-footer">
     <div class="page-footer__wrapper">
-      <a class="page-footer__heading" aria-label="Cat energy"></a>
+      <a class="page-footer__heading" aria-label="Cat energy" href="index.html"></a>
       <div class="page-footer__social social">
         <h2 class="visually-hidden">
           Социальные сети
