--- a/source/catalog.html
+++ b/source/catalog.html
@@ -432,7 +432,7 @@
   </main>
   <footer class="page-footer">
     <div class="page-footer__wrapper">
-      <a class="page-footer__heading" aria-label="Cat energy"></a>
+      <a class="page-footer__heading" aria-label="Cat energy" href="index.html"></a>
       <div class="page-footer__social social">
         <h2 class="visually-hidden">
           Социальные сети
@@ -473,7 +473,6 @@
       </div>
     </div>
   </footer>
-
 
   <script src="js/menu.js"></script>
 
