стилизация активного состояния лого, кнопок слайдера, состояния ошибки в форме

--- a/source/form.html
+++ b/source/form.html
@@ -79,11 +79,11 @@
           <div class="form__container">
             <p class="form__point">
               <label for="catName">Имя:<sup>*</sup></label>
-              <input class="form__field form__field--name" type="text" id="catName" placeholder="Барсик" required>
+              <input class="form__field form__field--name" type="text" id="catName" placeholder="Барсик">
             </p>
             <p class="form__point">
               <label for="catWeight">Вес (кг):<sup>*</sup></label>
-              <input class="form__field form__field--weight" type="number" id="catWeight" placeholder="7" required>
+              <input class="form__field form__field--weight" type="number" id="catWeight" placeholder="7">
             </p>
             <p class="form__point">
               <label class="form__label form__label--age" for="catAge">Возраст (лет):</label>
@@ -122,15 +122,15 @@
         <div class="form__container">
           <p class="form__point">
             <label for="contactMail">E-mail:<sup>*</sup></label>
-            <input class="form__field form__field--mail" type="email" id="contactMail" placeholder="kuklachev@gmail.com" required>
+            <input class="form__field form__field--mail" type="email" id="contactMail" placeholder="kuklachev@gmail.com">
             <svg class="form__icon form__icon--envelope" width="20" height="15">
               <use xlink:href="#icon-mail-address"></use>
             </svg>
           </p>
           <p class="form__point">
             <label for="contactTel">Телефон:<sup>*</sup></label>
-            <input class="form__field form__field--tel" type="tel" id="contactTel" placeholder="8 (960) 900-60-90" required>
-            <svg class="form__icon" width="20" height="21">
+            <input class="form__field form__field--tel" type="tel" id="contactTel" placeholder="8 (960) 900-60-90">
+            <svg class="form__icon form__icon--tel" width="20" height="21">
               <use xlink:href="#icon-phone-number"></use>
             </svg>
           </p>
@@ -257,8 +257,8 @@
     </div>
   </footer>
 
-  <script src="js/menu.js"></script>
+  <script src="js/script.js"></script>
 
 </body>
 
-  </html>
+</html>
