убрала ограничения по высоте, корректировка стилизации

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -391,7 +391,7 @@
       <h2 class="visually-hidden">
         Адрес
       </h2>
-      <div class="address__wrapper address__wrapper--grey-bg">
+      <div class="address__wrapper address__wrapper--grey-bg address__wrapper--catalog">
         <p class="address__text address__text--grey-bg">
           Приглашаем к&nbsp;сотрудничеству дилеров!
         </p>
