--- a/source/form.html
+++ b/source/form.html
@@ -75,15 +75,15 @@
             <legend class="visually-hidden">Цель программы</legend>
             <ul class="form__list form__list--goal">
               <li class="form__option">
-                <input class="form__radio" type="radio" name="programVersion" id="slimProgram" checked>
+                <input class="visually-hidden form__radio" type="radio" name="programVersion" id="slimProgram" checked>
                 <label for="slimProgram">Похудение</label>
               </li>
               <li class="form__option">
-                <input class="form__radio" type="radio" name="programVersion" id="proProgram">
+                <input class="visually-hidden form__radio" type="radio" name="programVersion" id="proProgram">
                 <label for="proProgram">Набор массы</label>
               </li>
               <li class="form__option">
-                <input class="form__radio" type="radio" name="programVersion" id="needAdvice">
+                <input class="visually-hidden form__radio" type="radio" name="programVersion" id="needAdvice">
                 <label for="needAdvice">Не знаю (Нужен ваш совет)</label>
               </li>
             </ul>
@@ -139,19 +139,19 @@
         <div class="form__container">
           <ul class="form__list form__list--extra">
             <li class="form__option">
-              <input class="form__checkbox" type="checkbox" name="extraSweetener" id="sweetener" checked>
+              <input class="visually-hidden form__checkbox" type="checkbox" name="extraSweetener" id="sweetener" checked>
               <label for="sweetener">Сахарозаменитель</label>
             </li>
             <li class="form__option">
-              <input class="form__checkbox" type="checkbox" name="extraWater" id="water">
+              <input class="visually-hidden form__checkbox" type="checkbox" name="extraWater" id="water">
               <label for="water">Питьевая вода</label>
             </li>
             <li class="form__option">
-              <input class="form__checkbox" type="checkbox" name="extraMilk" id="milk">
+              <input class="visually-hidden form__checkbox" type="checkbox" name="extraMilk" id="milk">
               <label for="milk">Молоко</label>
             </li>
             <li class="form__option">
-              <input class="form__checkbox" type="checkbox" name="extraVitamins" id="vitamins">
+              <input class="visually-hidden form__checkbox" type="checkbox" name="extraVitamins" id="vitamins">
               <label for="vitamins">Витамины</label>
             </li>
           </ul>
@@ -167,7 +167,7 @@
         Адрес
       </h2>
       <div class="address__wrapper address__wrapper--grey-bg address__wrapper--form">
-        <p class="address__text address__text--grey-bg">
+        <p class="address__text">
           Приглашаем к&nbsp;сотрудничеству дилеров!
         </p>
         <div>
