--- a/source/index.html
+++ b/source/index.html
@@ -242,8 +242,7 @@
         </ul>
       </div>
       <div class="page-footer__copyright copyright">
-        <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive">
-          <div class="copyright__text">HTML Academy</div>
+        <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive">HTML Academy
           <svg width="27" height="34">
             <use xlink:href="img/sprite.svg#icon-htmlacademy"></use>
           </svg>
