коррекция стилизации под переполнение

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -315,11 +315,13 @@
           </li>
         </ul>
         <div class="products-big-list">
-          <div class="products-big-list__text">
-            <p class="products-big-list__bold-text">Показать еще 100500 товаров</p>
-            <p>На самом деле вкусов гораздо больше!</p>
+          <div class="products-big-list__container">
+            <div class="products-big-list__text">
+              <p class="products-big-list__bold-text">Показать еще 100500 товаров</p>
+              <p>На самом деле вкусов гораздо больше!</p>
+            </div>
+            <a class="products-big-list__link" href="products.html">Показать все</a>
           </div>
-          <a class="products-big-list__link" href="products.html">Показать все</a>
         </div>
       </div>
     </section>
