--- a/source/form.html
+++ b/source/form.html
@@ -50,7 +50,7 @@
   </header>
   <main class="form-main">
     <h1 class="form-main__heading">Подбор программы</h1>
-    <p class="form-main__text">Заполните анкету, и мы подберем<br> программу питания для вашего кота</p>
+    <p class="form-main__text">Заполните анкету, и мы подберем программу&nbsp;питания для вашего кота</p>
     <form class="form" action="https://echo.htmlacademy.ru/" method="post">
       <div class="form__columns">
         <fieldset class="form__item form__item--info">
