исправления по последним замечаниям, резина на главной и каталоге

--- a/source/form.html
+++ b/source/form.html
@@ -49,8 +49,10 @@
     </div>
   </header>
   <main class="form-main">
-    <h1 class="form-main__heading">Подбор программы</h1>
-    <p class="form-main__text">Заполните анкету, и мы подберем программу&nbsp;питания для вашего кота</p>
+    <div class="form-main__wrapper">
+      <h1 class="form-main__heading">Подбор программы</h1>
+      <p class="form-main__text">Заполните анкету, и мы подберем программу&nbsp;питания для вашего кота</p>
+    </div>
     <form class="form" action="https://echo.htmlacademy.ru/" method="post">
       <div class="form__columns">
         <fieldset class="form__item form__item--info">
