--- a/source/catalog.html
+++ b/source/catalog.html
@@ -313,16 +313,14 @@
             </div>
             <a class="products__link" href="cart.html">Заказать</a>
           </li>
-        </ul>
-        <div class="products-big-list">
-          <div class="products-big-list__container">
+          <li class="products-big-list__container">
             <div class="products-big-list__text">
               <p class="products-big-list__bold-text">Показать еще 100500 товаров</p>
               <p>На самом деле вкусов гораздо больше!</p>
             </div>
             <a class="products-big-list__link" href="products.html">Показать все</a>
-          </div>
-        </div>
+          </li>
+        </ul>
       </div>
     </section>
     <section class="extra-products">
