--- a/source/index.html
+++ b/source/index.html
@@ -52,7 +52,7 @@
     <div class="page-main__heading">
       <div class="page-main__heading-background-color">
         <div class="page-main__container">
-          <h1 class="page-main__title">Функциональное питание для котов</h1>
+          <h1 class="page-main__title">Функциональное питание&nbsp;для&nbsp;котов</h1>
           <p class="page-main__slogan">Занялся собой? Займись котом!</p>
         </div>
       </div>
