--- a/source/catalog.html
+++ b/source/catalog.html
@@ -395,7 +395,7 @@
         <p class="address__text address__text--grey-bg">
           Приглашаем к&nbsp;сотрудничеству дилеров!
         </p>
-        <div>
+        <div class="address__info-wrapper">
           <p class="address__info address__info--steet">
             ул. Большая Конюшенная, д. 19/8
           </p>
