--- a/source/form.html
+++ b/source/form.html
@@ -172,7 +172,7 @@
         <p class="address__text">
           Приглашаем к&nbsp;сотрудничеству дилеров!
         </p>
-        <div>
+        <div class="address__info-wrapper">
           <p class="address__info address__info--steet">
             ул. Большая Конюшенная, д. 19/8
           </p>
